--- a/relatorio1/relatorio1.tex
+++ b/relatorio1/relatorio1.tex
@@ -276,7 +276,12 @@ novamente o último comando da coluna à esquerda.
 
     Os atrasos medidos na questão anterior podem ser vistos na imagem \ref{imgApcQ8}.
     Os comandos utilizados em suas medidas estão disponíveis no Código Fonte \ref{lstMeasureQ8}.
-    As formas de onda dos sinais de entrada $A$, $B$ e $C$ estão na imagem \ref{imgSinEntQ8}.
+    As formas de onda dos sinais de entrada $A$, $B$ e $C$ e a saída $S$ obtida pelas simulação 
+    estão na imagem \ref{imgSinEntQ8}.
+
+    Quando mantemos o sinal $A$ em nível lógico alto e o sinal $C$ em nível lógico baixo, o circuito
+    lógico da questão 1 funciona como uma porta inversora com entrada em $B$ e saída $S$. Pode-se 
+    observar na figura \ref{imgSinEntQ8} que, como esperado, a saída é a negação de $C$.
 
     \begin{lstlisting}[caption=Comandos utilizados para a medição de atraso de subida e descida por capacitância de carga., label=lstMeasureQ8]
 *
@@ -372,7 +377,10 @@ para melhor fazer o roteamento manual.
 
    Para adicionar o \emph{source} ao $V_{DD}$ ou ao $V_{SS}$ deve-se adicionar um novo
    \emph{shape} de metal 1, sobre o metal do \emph{source}. Este shape pode ser adicionado
-   aos ports $V_{DD}$ ou $V_{SS}$.
+   aos ports $V_{DD}$ ou $V_{SS}$. Isso funciona pois dois \emph{shapes} sobrepostos de 
+   mesma \emph{layer} se comportam como um único \emph{shape}. Logo, conectar algo em um
+   \emph{MET1} sobre o \emph{source} de um transistor, é o mesmo que conectar diretamente
+   ao \emph{source} em questão.
 
 \textbf{12.} Uma vez acrescentadas aos \emph{ports} todas as regiões desejadas, faça
    nova verificação com o \emph{DRC}.
@@ -414,8 +422,8 @@ Obs.: O comando \textbf{ \emph{IcTrace(M) -- netlist} } também serve, como o
    do \emph{layout} e inclua no trabalho).
 
    O gráfico com os atrasos de subida e descida estão na figura \ref{imgApcQ16} e os
-   sinais de entrada e saída estão na figura \ref{imgSinEntQ16}. O layout pode ser visto
-   na figura \ref{imgLayoutQ16}.
+   sinais de entrada utilizados e saída obtida pela simulação estão na figura 
+   \ref{imgSinEntQ16}. O layout pode ser visto na figura \ref{imgLayoutQ16}.
 
    \img{Atraso de subida e descida por capacitância de carga.}{imgApcQ16}{atraso_por_capacitancia_q16.jpg}
 
@@ -458,13 +466,10 @@ Obs.: O comando \textbf{ \emph{IcTrace(M) -- netlist} } também serve, como o
             \label{tabCalQ17}
             \centering
         \begin{tabular}{|l|r|r|}
-            \hline 
-                                &   Atraso de Descida   &   Atraso de Subida    \\
-            \hline 
-            Coeficiente Angular &               1386,8  &               1335,8  \\
-            \hline 
-            Coeficiente Linear  &   $0,15\cdot10^{-9}$  &   $0,10\cdot10^{-9}$  \\
-            \hline
+                                                                                    \hline 
+                                &   Atraso de Descida   &   Atraso de Subida    \\  \hline 
+            Coeficiente Angular &               1386,8  &               1335,8  \\  \hline 
+            Coeficiente Linear  &   $0,15\cdot10^{-9}$  &   $0,10\cdot10^{-9}$  \\  \hline
         \end{tabular}
     \end{table}
 
