--- a/relatorio1/relatorio.tex
+++ b/relatorio1/relatorio.tex
@@ -68,7 +68,7 @@
 %Inserção de imagens
 %\img{proportional width [optional]}{caption}{label}{path}
 \newcommand{\img}[4][0.75]{
-\begin{figure}[!hb]
+\begin{figure}[!hp]
     \centering
     \includegraphics[width=#1\textwidth]{#4}
     \caption{\label{#3}#2}
