--- a/relatorio2/relatorio2.tex
+++ b/relatorio2/relatorio2.tex
@@ -57,4 +57,34 @@ Mostre que a corrente de saída tem, quando os transistores $M_3$, $M_4$ e $M_5$ 
 
     \img{Circuito gerador de corrente de referência.}{imagQ4gerCorrenteRef}{FILE.jpg} % XXX
 
+\textbf{5.} *Considere os valores $M = 2$, $N = 1$ e $X = 1$. Determine através de equações os valores $\left( \frac{W}{L} \right)$ dos transistores e de $R$ para que
+\begin{equation}
+    I_S = X \cdot \frac{V_T}{R} \cdot ln\left(M \cdot N\right)
+\end{equation}
+O circuito deve funcionar para tensões na saída (dreno de $M_5$) tão altas quanto ($V_DD - 0,4 V$). Considere que $M_3$, $M_4$ e $M_5$ estão em forte inversão.
+
+\textbf{6.} *Utilize as dimensões $L_1 = 1,0 \mu m$ e $L_3 = 2,0 \mu m$ para o comprimento de canal dos transistores $M_1$ e $M_3$. Quais são as dimensões de $L$ que devem ser utilizadas nos transistores $M_2$, $M_4$ e $M_5$. Por quê? Determine as dimensões da largura de canal $W$ de todos os transistores (mostre numa tabela as dimensões determinadas).
+
+\textbf{7.} *Escreva o arquivo de entrada para simulação da fonte de corrente tomando cuidado em manter os transistores casados. Faça uma simulação do tipo DC variando $V_DD$ entre 0 V e 5 V (considere o dreno de $M_5$ em 0 V). Medir as correntes que passam pelos transistores $M_4$ e $M_3$ para $V_DD = 3,0 V$. (verifique se a relação entre estas correntes esta dentro do esperado e se não estiver corrija). O que acontece com a corrente na saída quando aumentamos $V_DD$? Por quê?
+
+\textbf{8.} *Ajuste o valor de $R$ para que a corrente de saída em $V_DD = 3,0 V$ seja a desejada no projeto (valor nominal). Apresente então o gráfico $I_S x V_DD$.
+
+\textbf{9.} *Determine a faixa de valores de $V_DD$ para a qual a condição $I_0 \left(0,98\right) < I_S < I_0 \left(1,02\right)$ seja observada, onde $I_0$ é a corrente para $V_DD = 3,0 V$. Qual é o valor mínimo de $V_DD$ achado?
+Chamaremos a faixa de tensão encontrada acima de faixa de operação do circuito para variações de $\pm 2\%$.
+
+\textbf{10.} *Caso desejemos ter pequenas variações de corrente mesmo para uma ampla variação da tensão de alimentação, quais modificações podem ser realizadas no projeto?
+
+\textbf{11.} *Reprojetar o circuito com modificações para reduzir a sua sensibilidade a variações de $V_DD$. Tomar cuidado para que as dimensões não aumentem muito e que a faixa de operação não seja muito reduzida. Apresente o esquemático do circuito, com as dimensões escolhidas, e o novo gráfico $I_S x V_DD$.
+
+\textbf{12.} *Alguns circuitos analógicos necessitam de um circuito de start-up para começarem a funcionar (por exemplo, fontes de corrente, osciladores, etc.). Verifique por simulação se a fonte de corrente necessita de um start-up (considere algumas tensões iniciais nos nós do circuito e verifique, através de simulação de transitório, se o circuito vai ou não para o ponto de operação correto). Caso haja alguma condição inicial em que o circuito não funcione, apresente figura da simulação. Qual comando deve ser utilizado para impor condições iniciais, \emph{.IC} ou \emph{.NODESET}?
+
+\textbf{13.} Ajustar o valor de $R$ para que a corrente em $M_5$ tenha o valor nominal desejado quando $V_DD = 3,0 V$.
+
+\textbf{14.} *Como deve ser desenhado o resistor (verificar no manual ENG-183_rev3.pdf como é feita a definição de um resistor)? Qual material é adequado para construí-lo?
+
+\textbf{15.} *Fazer a fonte de corrente (esquemático, símbolo com a localização do layout, layout, verificações, LVS, etc.). Observe que:
+    \textbf{a.} para gerar automaticamente o layout use o viewpoint. Caso seja usado o esquemático os resistores não serão criados;
+    \textbf{b.} tomar cuidado para garantir o melhor casamento entre os transistores $M_3$, $M_4$ e $M_5$; também cuidar do casamento entre os transistores $M_1$ e $M_2$.
+Quais são as dimensões do circuito completo (utilizar o comando Report -- Windows do ICSTATION)? Apresente o \emph{layout} do circuito.
+
 
